--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,14 @@
         android:theme="@style/Theme.AppCompat"
         tools:targetApi="31">
         <activity
+            android:name=".ResultActivity"
+            android:exported="false"
+            android:theme="@style/Theme.ResultPage"/>
+        <activity
             android:name=".GameActivity"
             android:exported="false"
             android:parentActivityName=".MainActivity"
-            android:theme="@style/Theme.MyApp"/>
+            android:theme="@style/Theme.MyApp" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
